# mmtf-c

./: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  README.md  TODO.txt  a.run  cmake_install.cmake  codeformat.sh  create-documentation.sh  demo.c  deploy-gh-pages.sh  git_commit.sh  helloDemo  publish-docs.sh
CMakeModules/: FindCheck.cmake
check-0.10.0/: Makefile  Makefile.in  aclocal.m4  check.pc  check_stdint.h  config.h  config.h.in  config.status  configure  libtool
doc/: Doxyfile
docs/: Doxyfile
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  a.run  array_converters.c  array_convertors.c  array_decoders.c  cmake_install.cmake  compile.sh  compile_and_multi.sh  compile_and_run.sh  compile_and_traverse.sh  decoders.c  demo.c  demo.c.orig  demo_v2.c  executable.run  ga.run  install-deps.sh  julien.c  linux_compiling.sh  mmtf_parser.c  mmtf_parser.c.orig  mmtf_parser.h  mmtf_parser2.c  mmtf_parser_private.h  mmtf_structure.c  multi.c  num_converters.c  test.txt  test_run_batch.sh  traverse.c  traverse.c.orig  traverse.h  valgrind_log_multi.txt
src_v2/: a.run  array_converters.c  array_converters.h  array_decoders.c  compile_and_run.sh  decoders.c  decoders.h  demo.c  demo.h  h_headers.h  mmtf_structure.h
src_v3/: a.run  array_decoders.h  c_headers.h  decoders.c  decoders.h  demo.c  demo.h  h_headers.h  mmtf_structure.h
src_v4/: READ.ME  a.run  demo.c  demo.h  mmtf_parser.c  (+1 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_num_converters.c
(+194 files in other folders)
